# benchmark_llm_serving

./: .env.example  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build_and_tests.yaml  install_test_from_requirements.yaml  publish-pypi.yaml  vulnerability.yaml  wheel.yaml
.husky/: pre-commit
datasets/: growing_prompts.json  prompts_length_1024.json  prompts_length_128.json  prompts_length_4096.json
src/benchmark_llm_serving/: backends.py  bench_suite.py  benchmark.py  io_classes.py  make_graphs.py  make_readmes.py  utils.py  utils_args.py  utils_metrics.py
src/benchmark_llm_serving/datasets/: growing_prompts.json  prefix.json  prompts_length_1024.json  prompts_length_128.json  prompts_length_2048.json  prompts_length_256.json  prompts_length_32.json  prompts_length_512.json
src/benchmark_llm_serving/query_profiles/: constant_number.py  growing_requests.py  query_functions.py  scheduled_requests.py
tests/: test_backends.py  test_bench_suite.py  test_benchmark.py  test_constant_number.py  test_growing_requests.py  test_io_classes.py  test_make_readmes.py  test_query_functions.py  test_scheduled_requests.py  test_utils.py  test_utils_args.py  test_utils_metrics.py
tests/data/: growing_prompts.json  metrics_response.txt  prompts_length_42.json
tests/data/raw_results/: kv_cache_profile_1.json  kv_cache_profile_2.json  kv_cache_profile_3.json  kv_cache_profile_4.json  kv_cache_profile_5.json
