[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark_llm_serving"
description = "A library to to benchmark LLMs via their API exposure"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmark_llm_serving*"]

[project.optional-dependencies]
test = ["httpx>=0.23,<1.0", "pytest>=8.2.0,<9.0", "pytest-cov>=5.0.0,<6.0", "mypy>=1.7.1,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=benchmark_llm_serving"
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_",
    "ignore:IPython could not be loaded!"
]

[tool.isort]
profile = "black"
