[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark_llm_serving"
description = "A library to to benchmark LLMs via their API exposure"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp>=3.9.5,<4.0",
    "prometheus_client>=0.20.0,<1.0",
    "matplotlib>=3.8.4,<4.0",
    "pydantic>=2.7.1,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "requests>=2.31.0,<3.0"
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmark_llm_serving*"]

[project.optional-dependencies]
test = ["httpx>=0.23,<1.0", "pytest>=8.2.0,<9.0", "pytest-cov>=5.0.0,<6.0", "mypy>=1.7.1,<2.0", "pytest-asyncio>=0.23.6,<1.0",
        "aioresponses>=0.7.6,<1.0", "requests-mock>=1.12.1,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=benchmark_llm_serving"
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_",
    "ignore:IPython could not be loaded!"
]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
