[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark_llm_serving"
authors = [
  {email = "drosdadssocle.00620@francetravail.fr"},
  {name = "Agence Data Services FT"}
]
description = "A library to benchmark LLMs via their API exposure"
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp>=3.9.5,<4.0",
    "prometheus_client>=0.20.0,<1.0",
    "matplotlib>=3.9.1,<4.0",
    "pydantic>=2.8.2,<3.0",
    "pydantic-settings>=2.3.4,<3.0",
    "requests>=2.32.3,<3.0",
    "mdutils>=1.6.0,<2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/France-Travail/benchmark_llm_serving"


[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmark_llm_serving*"]

[project.scripts]
bench-suite = "benchmark_llm_serving.bench_suite:main"

[project.optional-dependencies]
test = ["httpx>=0.27,<1.0", "pytest>=8.3.2,<9.0", "pytest-cov>=5.0.0,<6.0", "mypy>=1.11.0,<2.0", "pytest-asyncio>=0.23.8,<1.0",
        "aioresponses>=0.7.6,<1.0", "requests-mock>=1.12.1,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=benchmark_llm_serving"
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_",
    "ignore:IPython could not be loaded!"
]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
